# VectorChord-bm25

./: .gitignore  Cargo.toml  README.md  build.rs  deny.toml  tokenizer.md  vchord_bm25.control
.github/workflows/: check.yml  release.yml
crates/bm25/: Cargo.toml
crates/bm25/src/: address_documents.rs  address_tokens.rs  bm25.rs  buf.rs  build.rs  bulkdelete.rs  compression.rs  evaluate.rs  flush.rs  guide.rs  insert.rs  io.rs  lib.rs  maintain.rs  search.rs  seed.rs  segment.rs  tape.rs  tree.rs  tuples.rs  types.rs  vector.rs
crates/bm25/src/algorithm/: mod.rs
crates/bm25/src/algorithm/block_partition/: fixed_block_partition.rs  mod.rs
crates/bm25/src/utils/: loser_tree.rs  mod.rs  topk_computer.rs  vint.rs
crates/fuzz/: Cargo.toml
crates/fuzz/src/: main.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs  relation.rs
crates/score/: Cargo.toml
crates/score/src/: lib.rs
crates/simd/: Cargo.toml
crates/simd/src/: bitpacking.rs  bitpacking_u16_ordered.rs  bitpacking_u16_unordered.rs  bitpacking_u32_ordered.rs  bitpacking_u32_unordered.rs  bytepacking_u32_ordered.rs  bytepacking_u32_unordered.rs  emulate.rs  lib.rs
crates/u48/: Cargo.toml
crates/u48/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docker/: Dockerfile  binary.Dockerfile
sql/install/: vchord_bm25--0.1.0.sql  vchord_bm25--0.1.1.sql  vchord_bm25--0.2.0.sql  vchord_bm25--0.2.2.sql
src/: guc.rs  lib.rs  token.rs  weight.rs
src/algorithm/: block_wand.rs  mod.rs
src/algorithm/block_encode/: delta_bitpack.rs  mod.rs
src/algorithm/block_partition/: fixed_block_partition.rs  mod.rs
src/datatype/: binary_bm25vector.rs  bm25vector.rs  bytea.rs  cast.rs  casts_bm25vector.rs  functions.rs  memory_bm25vector.rs  memory_tsvector.rs  mod.rs  operator_bm25vector.rs  operators_bm25vector.rs  text_bm25vector.rs  tsvector.rs
src/index/: am.rs  build.rs  fetcher.rs  gucs.rs  hook.rs  insert.rs  mod.rs  operators.rs  options.rs  scan.rs  scanners.rs  storage.rs  temp.rs  vacuum.rs
src/index/bm25/: mod.rs  types.rs
src/index/bm25/am/: am_build.rs  am_vacuumcleanup.rs  mod.rs
src/index/bm25/scanners/: default.rs  mod.rs
src/page/: inspector.rs  mod.rs  postgres.rs  reader.rs  virtual.rs  writer.rs
src/segment/: builder.rs  delete.rs  field_norm.rs  growing.rs  meta.rs  mod.rs  payload.rs  sealed.rs  term_stat.rs
src/segment/posting/: append.rs  mod.rs  reader.rs  serializer.rs  writer.rs
src/sql/: bootstrap.sql  finalize.sql  tokenizer.sql
src/tests/: fuzz.rs  mod.rs
src/utils/: cells.rs  loser_tree.rs  mod.rs  topk_computer.rs
tests/: README.md  fuzz  init.sql
tests/sqllogictest/: append_big_vector.slt  bm25query.slt  cast.slt  custom_model_trigger.slt  datatype.slt  delete.slt  empty.slt  equality_operator.slt.fail  fallback_parameter.slt  index.slt  indexing.slt  prefilter.slt  scan.slt  scan_prefilter.slt  temp.slt  tokenizer.slt  unicode_long_token.slt  unicode_tokenizer.slt  unlogged.slt
tools/: package.sh  schema-codegen.sh  schema.sh  setup.sh
