[package]
name = "vchord_bm25"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_vchord_bm25"
path = "./src/bin/pgrx_embed.rs"

[features]
pg12 = ["pgrx/pg12"]
pg13 = ["pgrx/pg13"]
pg14 = ["pgrx/pg14"]
pg15 = ["pgrx/pg15"]
pg16 = ["pgrx/pg16"]
pg17 = ["pgrx/pg17"]

[dependencies]
arrayvec = "0.7.6"
bincode = "=1.3.3" # pin it to keep the same serialization format
bitflags = "2.9.0"
bitpacking = { version = "0.9", default-features = false, features = [
    "bitpacker4x",
] }
bytemuck = "1.18"
generator = "0.8.4"
lending-iterator = "0.1.7"
pgrx = "=0.13.1"
regex = "1.11.1"
rust-stemmers = { git = "https://github.com/tensorchord/rust-stemmers.git" }
serde = { version = "1.0.217", features = ["derive"] }
tantivy-stemmers = { version = "0.4.0", features = [
    "default",
    "english_porter",
] }
thiserror = "2"
tocken = "0.1.0"
tokenizers = { version = "0.21.0", default-features = false, features = [
    "onig",
] }
toml = "0.8.19"
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12.0"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
rand = "0.9"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev-opt]
inherits = "dev"
opt-level = 3
lto = "thin"
codegen-units = 8

[lints.clippy]
missing_safety_doc = "allow"
new_without_default = "allow"
not_unsafe_ptr_arg_deref = "allow"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pgrx_embed)'] }
