[package]
name = "vchord_bm25"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_vchord_bm25"
path = "./src/bin/pgrx_embed.rs"

[features]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = ["dep:rand"]

[dependencies]
arrayvec = "0.7.6"
bitflags = "2.9.0"
bitpacking = { version = "0.9", default-features = false, features = [
    "bitpacker4x",
] }
bytemuck = "1.18"
generator = "0.8.4"
lending-iterator = "0.1.7"
pgrx = "=0.14.1"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2"

# used for `pg_test` and `test`
rand = { version = "0.9", optional = true }

[dev-dependencies]
pgrx-tests = "=0.14.1"

[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev-opt]
inherits = "dev"
opt-level = 3
lto = "thin"
codegen-units = 8

[lints.clippy]
missing_safety_doc = "allow"
new_without_default = "allow"
not_unsafe_ptr_arg_deref = "allow"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pgrx_embed)'] }
