[package]
name = "bm25"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
score = { path = "../score" }
simd = { path = "../simd" }
u48 = { path = "../u48" }

always_equal.workspace = true
index.workspace = true
serde.workspace = true
validator.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
