[package]
name = "bm25"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
always_equal = { path = "../always_equal" }
index = { path = "../index" }
score = { path = "../score" }
simd = { path = "../simd" }

blake3 = "1.8.4"
getrandom = "0.4.2"
serde.workspace = true
tempfile.workspace = true
validator.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
